[package]
name = "text_style"
version = "0.1.0"
edition = "2021"
authors = ["matteac"]
license = "MIT"
description = "Trait to style String and &str"
repository = "https://github.com/matteac/text_style"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
